# ai-assistant

./: Dockerfile  README.md  pyproject.toml
app/: entrypoint.py
