[tool.poetry]
name = "ai-assistant"
version = "0.1.0"
description = "Interact with GPT-4 in a chat format in a browser."
authors = [
    "antipop <antipop@pepabo.com>",
    "data-team <data-team@ml.pepabo.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
streamlit = "^1.21.0"
streamlit-chat = "^0.0.2.2"
langchain = "^0.0.141"
openai = "^0.27.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pyproject-flake8 = "^6.0.0.post1"

[tool.isort]
line_length = 119
profile = "black"

[tool.flake8]
max-line-length = 119
ignore = "E203,W503,W504"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
